--- a/Curso de Flask/platzi-flask/templates/hello.html
+++ b/Curso de Flask/platzi-flask/templates/hello.html
@@ -1,13 +1,22 @@
-{% if user_ip %}
+{% extends 'base.html' %}
+{% import 'macros.html' as macros %}
 
+{% block title %}
+{{ super() }}
+Bienvenido
+{% endblock %}
+
+{% block content %}
+{% if user_ip %}
 
 <h1>Hello World Platzi, tu IP es {{ user_ip }}</h1>
 {% else %}
-    <a href="{{ url_for('index') }}">Ir a inicio</a>
+<a href="{{ url_for('index') }}">Ir a inicio</a>
 {% endif %}
 
 <ul>
     {% for todo in todos %}
-    <li>todo</li>
+    {{ macros.render_todo(todo) }}
     {% endfor %}
 </ul>
+{% endblock %}
