--- a/Curso de Flask/platzi-flask/templates/navbar.html
+++ b/Curso de Flask/platzi-flask/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav>
     <ul>
+        <img src="{{ url_for('static', filename='images/platzi.png') }}" alt="Platzi Logo">
         <li>
             <a href="{{ url_for('index') }}">Ir a inicio</a>
         </li>
