Flask-Bootstrap and Flask-WTF implements

--- a/Curso de Flask/platzi-flask/templates/hello.html
+++ b/Curso de Flask/platzi-flask/templates/hello.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %}
-{{ super() }}
-Bienvenido
+    {{ super() }}
+    Bienvenido
 {% endblock %}
 
 {% block content %}
@@ -13,6 +14,14 @@ Bienvenido
 {% else %}
 <a href="{{ url_for('index') }}">Ir a inicio</a>
 {% endif %}
+
+<div class="container">
+        <!--<form action="{{ url_for('hello')}}" method="POST">-->
+            <!--{{ login_form.username }}-->
+            <!--{{ login_form.username.label }}-->
+        <!--</form>-->
+        {{ wtf.quick_form(login_form) }}
+</div>
 
 <ul>
     {% for todo in todos %}
