--- a/Curso de Flask/platzi-flask/templates/hello.html
+++ b/Curso de Flask/platzi-flask/templates/hello.html
@@ -8,9 +8,12 @@
 {% endblock %}
 
 {% block content %}
+    {% if username %}
+        <h1>Bienvenido, {{ username | capitalize }}</h1>
+    {% endif %}
 {% if user_ip %}
 
-<h1>Hello World Platzi, tu IP es {{ user_ip }}</h1>
+<h3>Hello World Platzi, tu IP es {{ user_ip }}</h3>
 {% else %}
 <a href="{{ url_for('index') }}">Ir a inicio</a>
 {% endif %}
