--- a/Curso de Flask/platzi-flask/app/templates/hello.html
+++ b/Curso de Flask/platzi-flask/app/templates/hello.html
@@ -18,6 +18,13 @@
 <a href="{{ url_for('index') }}">Ir a inicio</a>
 {% endif %}
 
+<div class="container">
+    <h2>Crear una nueva tarea</h2>
+    <!-- Rendereamos la forma -->
+    {{ wtf.quick_form(todo_form) }}
+</div>
+
+
 <ul>
     {% for todo in todos %}
     {{ macros.render_todo(todo) }}
