--- a/Curso de Flask/platzi-flask/app/templates/hello.html
+++ b/Curso de Flask/platzi-flask/app/templates/hello.html
@@ -24,10 +24,10 @@
     {{ wtf.quick_form(todo_form) }}
 </div>
 
-
-<ul>
+<ul class="list-group">
     {% for todo in todos %}
-    {{ macros.render_todo(todo) }}
+    {{ macros.render_todo(todo, delete_form) }}
     {% endfor %}
-</ul>
+  </ul>
+  
 {% endblock %}
