--- a/Curso de Flask/platzi-flask/app/templates/hello.html
+++ b/Curso de Flask/platzi-flask/app/templates/hello.html
@@ -9,22 +9,22 @@
 
 {% block content %}
     {% if username %}
-        <h1>Bienvenido, {{ username | capitalize }}</h1>
+        <h1 style="padding-left: 5%; padding-right: 5%;">Bienvenido, {{ username | capitalize }}</h1>
     {% endif %}
 {% if user_ip %}
 
-<h3>Hello World Platzi, tu IP es {{ user_ip }}</h3>
+<h3 style="padding-left: 5%; padding-right: 5%;">Tu IP es {{ user_ip }}</h3>
 {% else %}
 <a href="{{ url_for('index') }}">Ir a inicio</a>
 {% endif %}
 
-<div class="container">
+<div class="container" style="padding-bottom: 5%;">
     <h2>Crear una nueva tarea</h2>
     <!-- Rendereamos la forma -->
     {{ wtf.quick_form(todo_form) }}
 </div>
 
-<ul class="list-group">
+<ul class="list-group" style="padding-left: 5%; padding-right: 5%;">
     {% for todo in todos %}
     {{ macros.render_todo(todo, delete_form, update_form) }}
     {% endfor %}
