--- a/Curso de Flask/platzi-flask/app/templates/navbar.html
+++ b/Curso de Flask/platzi-flask/app/templates/navbar.html
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <img src="{{ url_for('static', filename='images/platzi.png') }}"
+                <img src="{{ url_for('static', filename='images/works.png') }}"
                      style="max-width: 48px"
                      alt="Platzi logo">
             </a>
@@ -32,7 +32,7 @@
                 {% endif %}
                 
                 <li><a href="{{ url_for('index') }}">Inicio</a></li>
-                <li><a href="https://platzi.com" target="_blank">Platzi</a></li>
+                <li><a href="https://platzi.com" target="_blank">About</a></li>
             </ul>
         </div>
     </div>
